# effectz-gpt

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: deploy-whatsapp.yml
effectzgpt/: README.md
effectzgpt/admin/: .env  README.md  package-lock.json  package.json
effectzgpt/admin/src/app/: layout.tsx  page.tsx
effectzgpt/admin/src/components/: index.tsx
effectzgpt/admin/src/sections/: knowledge.tsx
effectzgpt/admin/src/theme/: theme.tsx
effectzgpt/backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
effectzgpt/backend/app/agent/: agent.py  reActWorkflowAgnet.py
effectzgpt/backend/app/api/routers/: agent.py  chat.py  data_ingestion.py  grafana_config.py  image_generation.py  model_config.py  models.py  question_ingestion.py  url_scraper.py  vercel_response.py  web_scraper.py
effectzgpt/backend/app/api/routers/management/: files.py  llamacloud.py  loader.py  reranker.py  tools.py
effectzgpt/backend/app/api/services/: file.py
effectzgpt/backend/app/controllers/: env_configs.py  files.py  loader.py  system_prompt.py  tools.py
effectzgpt/backend/app/engine/: __init__.py  constants.py  generate.py  grafana.py  image_generator.py  node_postprocessors.py  node_preprocessors.py  prompt_generator.py  query_preprocessor.py  raptor.py  reranker.py  vectordb.py
effectzgpt/backend/app/engine/loaders/: __init__.py  db.py  web.py
effectzgpt/backend/app/engine/vectordbs/: chroma.py  qdrant.py
effectzgpt/backend/app/events/: events.py
effectzgpt/backend/app/models/: base_env.py  chat_config.py  file.py  llamacloud_config.py  loader.py  model_config.py  reranker_config.py
effectzgpt/backend/app/tasks/: indexing.py
effectzgpt/backend/app/tools/: __init__.py
effectzgpt/backend/chroma/: chroma.sqlite3
effectzgpt/backend/config/: loaders.yaml
effectzgpt/backend/data/data_source/: 1) Deposit number request.txt  10) Approval to destroy the goods.txt  2) Amendment request - renewal of the deposit number.txt  3) Request to subscribe to an ISBN agency.txt  4) Deposit number cancellation request.txt  5) Request an ISBN.txt  6) Request for information.txt  7) Gift request.txt  8) Training request.txt  9) Request to hold an event in the National Library.txt  Appendix 1. Requirements.docx.md  Appendix 2. Requirement specification IT local operations.docx.md  Appendix 3. Requirement specification IT cloud solution.docx.md  Appendix 4. Implementation plan.docx.md  Appendix 5. SLA Service and Support.docx.md  Appendix 6. Conversion.docx.md  Appendix Follow-up template Sanctions against Russia and Belarus.docx.md  Attachment. PUB agreement.docx.md  Contact.docx.md  References.docx.md  Terms.docx.md
effectzgpt/frontend/: .dockerignore  .env  .env.example  .firebaserc  .gitignore  Dockerfile  README.md  envConfig.ts  firestore.rules  package-lock.json  package.json  start.sh
effectzgpt/frontend/app/: globals.css  layout.tsx  page.tsx
effectzgpt/frontend/app/admin/: layout.tsx  page.tsx
effectzgpt/frontend/app/components/: chat-section.tsx  header.tsx
effectzgpt/frontend/app/dashboard/: page.tsx
effectzgpt/frontend/app/login/: page.tsx
effectzgpt/frontend/client/: files.ts  utils.ts
effectzgpt/frontend/components/: chat-button.tsx  chat-popup.tsx  chat-section.tsx  dashboard-view.tsx  header.tsx
effectzgpt/frontend/components/auth/: Auth.tsx  ProtectedRoute.tsx  UserProfile.tsx
effectzgpt/frontend/components/ui/: document-preview.tsx  speech-uploader.tsx
effectzgpt/frontend/config/: firebase.ts
effectzgpt/frontend/context/: index.tsx
effectzgpt/frontend/context/AuthContext/: index.tsx
effectzgpt/frontend/sections/: demoChat.tsx
effectzgpt/frontend/sections/config/: fileLoader.tsx  reranker.tsx  tool.tsx
effectzgpt/frontend/utils/BetterOmmit/: index.ts
effectzgpt/messenger-integration/: .env.example  Dockerfile  index.ts  package-lock.json  package.json
effectzgpt/messenger-integration/src/: app.ts
effectzgpt/messenger-integration/src/controllers/: webHookController.ts
effectzgpt/messenger-integration/src/services/: effectzGpt.ts  messengerService.ts
effectzgpt/whatsapp-inregration/: .env.example  DEPLOYMENT.md  Dockerfile  Dockerfile.production  README-DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  index.ts  package-lock.json  package.json  quick-deploy.sh  tsconfig.json  webHookHandler.ts
effectzgpt/whatsapp-inregration/lib/: extractString.ts  processMessage.ts  sendMessege.ts
effectzgpt/whatsapp-inregration/src/: app.ts  index.ts
effectzgpt/whatsapp-inregration/types/: type.ts
(+73 files in other folders)
