[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource_init"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.112.2"
python-dotenv = "^1.0.0"
aiostream = "^0.5.2"
llama-index = "^0.11.4"
cachetools = "^5.3.3"
cohere = "5.6.2"
python-multipart = "0.0.9"
#llama-index-readers-web = "^0.1.23"
pymongo = "^4.8.0"
llama-index-core = ">=0.10.43"
# agent
llama-index-agent-openai = ">=0.3.0,<0.4.0"

#db
llama-index-vector-stores-chroma = "^0.2.0"
llama-index-vector-stores-qdrant = "^0.3.0"

#other
llama-index-postprocessor-cohere-rerank = "^0.2.0"
llama-index-packs-raptor = "^0.2.0"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"


[tool.poetry.dependencies.docx2txt]
version = "^0.8"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"