[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource_init"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
aiostream = "^0.5.2"
llama-index = "0.10.58"
cachetools = "^5.3.3"
cohere = "5.6.2"
python-multipart = "0.0.9"
pydantic-settings = "^2.2.1"
llama-index-readers-web = "0.1.23"
pymongo = "^4.8.0"
chromadb = "0.5.1"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-chroma]
version = "^0.1.8"

[tool.poetry.dependencies.llama-index-vector-stores-qdrant]
version = "^0.2.15"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"

[tool.poetry.dependencies."llama-index-postprocessor-cohere-rerank"]
version = "0.1.7"

[tool.poetry.dependencies."llama-index-packs-raptor"]
version = "0.1.3"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.ollama.dependencies]
llama-index-embeddings-ollama = "^0.1.2"
llama-index-llms-ollama = "^0.1.3"

[tool.poetry.group.azure.dependencies]
llama-index-embeddings-azure-openai = "^0.1.9"
llama-index-llms-azure-openai = "^0.1.8"

#[tool.poetry.group.mistralai.dependencies]
#llama-index-embeddings-mistralai = "^0.1.4"
#llama-index-llms-mistralai = "^0.1.17"

[tool.poetry.group.gemini.dependencies]
llama-index-embeddings-gemini = "^0.1.6"
llama-index-llms-gemini = "^0.1.10"

#[tool.poetry.group.groq.dependencies]
#llama-index-embeddings-fastembed = "^0.2.0"
#llama-index-llms-groq = "^0.1.4"

